<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/et_pwd"
        android:background="@drawable/et_shape"
        android:layout_marginLeft="@dimen/d_24"
        android:layout_marginRight="@dimen/d_24"
        android:padding="@dimen/padding_lrtb"
        android:textSize="@dimen/title_levelthree_text_size_16"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:hint="@string/input_password"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_login"
        android:background="@drawable/loginbtn_shape"
        android:layout_below="@+id/et_pwd"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="@dimen/d_24"
        android:layout_marginRight="@dimen/d_48"
        android:layout_marginLeft="@dimen/d_48"
        android:padding="@dimen/padding_lrtb"
        android:textSize="@dimen/title_levelthree_text_size_16"
        android:textColor="@color/black"
        android:text="@string/login"
        android:layout_height="wrap_content" />


     <TextView
         android:id="@+id/tv_register"
         android:text="@string/register"
         android:textColor="@color/blue"
         android:gravity="center"
         android:layout_marginBottom="@dimen/d_12"
         android:layout_alignParentBottom="true"
         android:textSize="@dimen/title_levelthree_text_size_16"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />

</RelativeLayout>
