<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:background="@color/red"
        android:layout_height="48dp">
        <TextView
            android:id="@+id/tv_message_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="123456"
            android:layout_marginLeft="@dimen/d_12"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center_vertical"/>
        <ImageView
            android:id="@+id/dialog_title_close"
            android:layout_marginRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:scaleY="1.5"
            android:scaleX="1.5"
            android:src="@mipmap/icon_pop_close" />
    </RelativeLayout>

        <TextView
            android:id="@+id/treasurename"
            android:layout_marginRight="@dimen/d_12"
             android:layout_marginLeft="@dimen/d_12"
            android:layout_marginTop="@dimen/d_24"
            android:layout_width="wrap_content"
            android:text="@string/treasurename"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/d_24"
        android:layout_marginRight="@dimen/d_12"
        android:layout_marginLeft="@dimen/d_12"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/operate_type"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/operate_type"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/d_12"
            android:layout_marginRight="@dimen/d_12"
            android:padding="4dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:background="@drawable/et_shape"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/d_24"
        android:layout_marginRight="@dimen/d_12"
        android:layout_marginLeft="@dimen/d_12"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/treasure_amount"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/treasure_amount"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/d_12"
            android:layout_marginRight="@dimen/d_12"
            android:padding="4dp"
            android:inputType="numberDecimal"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:background="@drawable/et_shape"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/ensure"
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/d_24"
        android:layout_marginRight="@dimen/d_24"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="@dimen/d_24"
        android:background="@color/red"
        android:paddingTop="@dimen/d_12"
        android:paddingBottom="@dimen/d_12"
        android:textColor="@color/white"
        android:text="确定"/>

</LinearLayout>